# TestScenario

./: .gitmodules  package-lock.json
Accuracy/: hardhat.config.js  package.json
Accuracy/abi/FireWallDeployer.sol/: FireWallDeployer.json
Accuracy/abi/attack.sol/: Attack.json
Accuracy/abi/etherStore.sol/: EtherStore.json
Accuracy/abi/normal.sol/: Normal_tx.json
Accuracy/contracts/: example.sol
Accuracy/example/: README.md  foundry.toml
Accuracy/example/script/: Bevo.s.sol  Reentrancy.s.sol  param_detect_1.s.sol  replay_auth.s.sol
Accuracy/example/src/: ERC20.sol  UniswapV2ERC20.sol  UniswapV2Factory.sol  (+4 more)
Accuracy/test/: test.js
BlackList/findout/: .env  Cargo.toml
BlackList/testcase/: .env  Cargo.toml
BlackList/testcase/abi/: registry.json  registryProxy.json
BlackList/testcase/src/: lib.rs  main.rs
BlackList/testcase/src/auth/: auth.rs  data.rs  generate_data.rs  mod.rs
Contract_audit/: hardhat.config.js  package.json
Contract_audit/script/: DeployFirewall.s.sol  DeployProtectedProject.s.sol  ListenFirewallEvents.s.sol.sol  test_priceManipulation.s.sol
Contract_audit/src/: Utils.sol
Contract_audit/test/: ListenFirewallEvent.js  Test.js  registerProject.js
PriceManipulation_Detection_Interception/hello_foundry/: foundry.toml
Regulation/src/: Regulated2.sol  RegulatedToken.sol
Regulation/test/: RegulatedToken.t.sol  newtest.t.sol
TraceRoot/: foundry.toml
TraceRoot/cache/: solidity-files-cache.json  test-failures
TraceRoot/src/: Reentrancy.sol  ReentrancyAttack.sol
TraceRoot/test/: FlashLoanv2.t.sol  FlashLoanv3.t.sol
(+135 files in other folders)
