[package]
name = "testcase"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.0", features = [
    "full",
    "provider-debug-api",
    "reqwest",
    "rpc-types",
] }
anyhow = "1.0.93"
dotenv = "0.15.0"
futures-util = "0.3.31"
rayon = "1.10.0"
tokio = { version = "1.40.0", features = ["full"] }
